chnaged help/expand/collapse icons. minor css fixes.

--- a/public/css/1280.css
+++ b/public/css/1280.css
@@ -6,3 +6,7 @@
 {
     width:53%;
 }
+#volume_gutter
+{
+    margin-right:30px;
+}
